--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -87,7 +87,8 @@ table {
     }
     &__main {
         display: grid;
-        grid-template-rows: 618px 310px;
+        grid-template-rows: 1fr 310px;
+        row-gap: 26px;
         &--sentences {
             padding-right: 20px;
             padding-left: 20px;
