--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -142,3 +142,90 @@ table {
         }
     }
 }
+
+// ハンバーガーメニュー
+.top__header--menu-btn--btn {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    display: flex;
+    height: 48px;
+    width: 48px;
+    justify-content: center;
+    align-items: center;
+    z-index: 90;
+    background-color: #C32D4D;
+    border-radius: 0px 0px 0px 10px;
+    span, span:before,span:after {
+        content: '';
+        display: block;
+        height: 3px;
+        width: 25px;
+        border-radius: 3px;
+        background-color: #ffffff;
+        position: absolute;
+    }
+    span:before {
+        bottom: 8px;
+    }
+    span:after {
+        top: 8px;
+    }
+}
+.menu-content {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    z-index: 80;
+    background-color: #C32D4D;
+    transition: all 0.5s;
+    ul {
+        height: 100%;
+        width: 100%;
+        display: grid;
+        grid-template-rows: 24px 24px 24px 24px;
+        row-gap: 20px;
+        justify-content: center;
+        align-content: center;
+        font-family: EB Garamond;
+        font-size: 24px;
+        text-align: center;
+        li {
+            list-style: none;
+            a {
+                color:#ffffff;
+                text-decoration: none;
+            }
+            a::before {
+                content: "";
+                width: 7px;
+                height: 7px;
+                border-top: solid 2px #ffffff;
+                border-right: solid 2px #ffffff;
+                transform: rotate(45deg);
+                position: absolute;
+                right: 11px;
+                top: 16px;
+            }
+        }
+    }
+}
+#menu-btn-check:checked ~ .menu-content {
+    left: 0;
+}
+#menu-btn-check:checked ~ .top__header--menu-btn--btn span {
+    background-color: rgba(255, 255, 255, 0);/*メニューオープン時は真ん中の線を透明にする*/
+}
+#menu-btn-check:checked ~ .top__header--menu-btn--btn span::before {
+    bottom: 0;
+    transform: rotate(45deg);
+}
+#menu-btn-check:checked ~ .top__header--menu-btn--btn span::after {
+    top: 0;
+    transform: rotate(-45deg);
+}
+#menu-btn-check {
+    display: none;
+}
