fix footer to link

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -133,6 +133,10 @@ table {
         &--content {
             grid-row: 2 / 3;
             color: #FFFFFF;
+            a {
+                text-decoration: none;
+                color: #FFFFFF;
+            }
         }
         &--copyright {
             text-align: center;
