--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -50,6 +50,8 @@ table {
 }
 /* リセットcss */
 
+@import 'footer.scss';
+
 // sp版
 .top {
     display: grid;
@@ -119,30 +121,6 @@ table {
         &--image {
             display: grid;
             justify-content: center;
-        }
-    }
-    &__footer {
-        background-color: #C32D4D;
-        font-family: EB Garamond;
-        &--contents {
-            display: grid;
-            grid-template-rows:40px 21px;
-            justify-content: center;
-            column-gap: 30px;
-        }
-        &--content {
-            grid-row: 2 / 3;
-            color: #FFFFFF;
-            a {
-                text-decoration: none;
-                color: #FFFFFF;
-            }
-        }
-        &--copyright {
-            text-align: center;
-            padding-top: 20px;
-            padding-bottom: 40px;
-            color: #F9B1C0;
         }
     }
 }
