--- a/css/styles.css
+++ b/css/styles.css
@@ -202,4 +202,49 @@ table {
       display: grid;
       justify-content: center; }
 
+.menu {
+  display: grid;
+  grid-template-rows: 160px 1fr 137px; }
+  .menu__main {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 26px;
+    column-gap: 15px;
+    margin: 0 auto;
+    padding: 40px 0; }
+    .menu__main--content img {
+      margin-bottom: 9px; }
+    .menu__main--content--product-name {
+      margin-bottom: 7px;
+      color: #BA4862;
+      font-size: 13px;
+      font-family: Noto Sans JP Regular; }
+    .menu__main--content--price {
+      color: #333333;
+      font-size: 12px; }
+
+.common__header {
+  background-image: url(../img/bg-header_sp.png);
+  height: 100%;
+  background-size: cover;
+  display: grid;
+  grid-template-rows: 48px 55px 1fr;
+  row-gap: 3px;
+  align-items: center; }
+  .common__header--title img {
+    padding: 15px; }
+  .common__header--main-contents {
+    grid-row: 2 / 3;
+    text-align: center; }
+  .common__header--main-content1 {
+    color: #C32D4D;
+    font-family: EB Garamond;
+    margin-bottom: 3px;
+    font-size: 32px; }
+  .common__header--main-content2 {
+    color: #333333;
+    font-family: EB Garamond;
+    font-size: 11px; }
+
 /*# sourceMappingURL=styles.css.map */
