modify put css into parts

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,6 @@
-@import 'reset.scss';
-@import 'footer.scss';
-@import 'hamburger.scss';
+@import 'parts/reset.scss';
+@import 'parts/footer.scss';
+@import 'parts/hamburger.scss';
+@import 'parts/common-header.scss';
 @import 'top/sp.scss';
 @import 'menu/sp.scss';
-@import 'common-header.scss';
