--- a/css/styles.css
+++ b/css/styles.css
@@ -247,4 +247,20 @@ table {
       color: #333333;
       font-size: 12px; }
 
+.access__main {
+  margin: 40px 0; }
+  .access__main__map {
+    text-align: center; }
+  .access__main__texts {
+    margin: 0 20px;
+    font-size: 15px;
+    color: #333333;
+    font-family: Noto Sans JP Regular; }
+  .access__main__text1 {
+    margin-bottom: 37px; }
+  .access__main__text2 {
+    margin-bottom: 23px; }
+    .access__main__text2 span {
+      font-family: EB Garamond; }
+
 /*# sourceMappingURL=styles.css.map */
