--- a/css/styles.css
+++ b/css/styles.css
@@ -263,4 +263,25 @@ table {
     .access__main__text2 span {
       font-family: EB Garamond; }
 
+.recruit__main {
+  padding: 40px 20px;
+  color: #333333; }
+  .recruit__main__title {
+    text-align: center;
+    padding-top: 4px;
+    padding-bottom: 8px; }
+  .recruit__main--text {
+    padding: 40px 0;
+    border-bottom: 1px solid #E2E2E2; }
+    .recruit__main--text--title {
+      margin-bottom: 12px; }
+
+.list-style-circle {
+  list-style: circle;
+  list-style-position: inside;
+  padding-left: 16px; }
+.list-style-disc {
+  list-style: disc;
+  list-style-position: inside; }
+
 /*# sourceMappingURL=styles.css.map */
