--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,4 +4,5 @@
 @import 'parts/common-header.scss';
 @import 'top/sp.scss';
 @import 'menu/sp.scss';
-@import 'access/sp.scss'
+@import 'access/sp.scss';
+@import 'recruit/sp.scss';
