fix access.html side margin to padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ table {
       font-size: 12px; }
 
 .access__main {
-  margin: 40px 0; }
+  padding: 40px 0; }
   .access__main__map {
     text-align: center; }
   .access__main__texts {
