--- a/css/styles.css
+++ b/css/styles.css
@@ -68,85 +68,88 @@ table {
     padding-bottom: 40px;
     color: #F9B1C0; }
 
-.hamburger-menu--menu-btn--btn {
-  position: fixed;
-  top: 0px;
-  right: 0px;
-  display: flex;
-  height: 48px;
-  width: 48px;
-  justify-content: center;
-  align-items: center;
-  z-index: 90;
-  background-color: #C32D4D;
-  border-radius: 0px 0px 0px 10px; }
-  .hamburger-menu--menu-btn--btn span, .hamburger-menu--menu-btn--btn span:before, .hamburger-menu--menu-btn--btn span:after {
-    content: '';
-    display: block;
-    height: 3px;
-    width: 25px;
-    border-radius: 3px;
-    background-color: #ffffff;
-    position: absolute; }
-  .hamburger-menu--menu-btn--btn span:before {
-    bottom: 8px; }
-  .hamburger-menu--menu-btn--btn span:after {
-    top: 8px; }
-
-.menu-content {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 100%;
-  z-index: 80;
-  background-color: #C32D4D;
-  transition: all 0.5s; }
-  .menu-content ul {
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-rows: 24px 24px 24px 24px;
-    row-gap: 20px;
+@media screen and (max-width: 1023px) {
+  .hamburger-menu--menu-btn--btn {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    display: flex;
+    height: 48px;
+    width: 48px;
     justify-content: center;
-    align-content: center;
-    font-family: EB Garamond;
-    font-size: 24px;
-    text-align: center; }
-    .menu-content ul li {
-      list-style: none; }
-      .menu-content ul li a {
-        color: #ffffff;
-        text-decoration: none; }
-      .menu-content ul li a::before {
-        content: "";
-        width: 7px;
-        height: 7px;
-        border-top: solid 2px #ffffff;
-        border-right: solid 2px #ffffff;
-        transform: rotate(45deg);
-        position: absolute;
-        right: 11px;
-        top: 16px; }
+    align-items: center;
+    z-index: 90;
+    background-color: #C32D4D;
+    border-radius: 0px 0px 0px 10px; }
+    .hamburger-menu--menu-btn--btn span, .hamburger-menu--menu-btn--btn span:before, .hamburger-menu--menu-btn--btn span:after {
+      content: '';
+      display: block;
+      height: 3px;
+      width: 25px;
+      border-radius: 3px;
+      background-color: #ffffff;
+      position: absolute; }
+    .hamburger-menu--menu-btn--btn span:before {
+      bottom: 8px; }
+    .hamburger-menu--menu-btn--btn span:after {
+      top: 8px; }
 
-#menu-btn-check:checked ~ .menu-content {
-  left: 0; }
+  .menu-content {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    z-index: 80;
+    background-color: #C32D4D;
+    transition: all 0.5s; }
+    .menu-content ul {
+      height: 100%;
+      width: 100%;
+      display: grid;
+      grid-template-rows: 24px 24px 24px 24px;
+      row-gap: 20px;
+      justify-content: center;
+      align-content: center;
+      font-family: EB Garamond;
+      font-size: 24px;
+      text-align: center; }
+      .menu-content ul li {
+        list-style: none; }
+        .menu-content ul li a {
+          color: #ffffff;
+          text-decoration: none; }
+        .menu-content ul li a::before {
+          content: "";
+          width: 7px;
+          height: 7px;
+          border-top: solid 2px #ffffff;
+          border-right: solid 2px #ffffff;
+          transform: rotate(45deg);
+          position: absolute;
+          right: 11px;
+          top: 16px; }
 
-#menu-btn-check:checked ~ .hamburger-menu--menu-btn--btn span {
-  background-color: rgba(255, 255, 255, 0);
-  /*メニューオープン時は真ん中の線を透明にする*/ }
+  #menu-btn-check:checked ~ .menu-content {
+    left: 0; }
 
-#menu-btn-check:checked ~ .hamburger-menu--menu-btn--btn span::before {
-  bottom: 0;
-  transform: rotate(45deg); }
+  #menu-btn-check:checked ~ .hamburger-menu--menu-btn--btn span {
+    background-color: rgba(255, 255, 255, 0);
+    /*メニューオープン時は真ん中の線を透明にする*/ }
 
-#menu-btn-check:checked ~ .hamburger-menu--menu-btn--btn span::after {
-  top: 0;
-  transform: rotate(-45deg); }
+  #menu-btn-check:checked ~ .hamburger-menu--menu-btn--btn span::before {
+    bottom: 0;
+    transform: rotate(45deg); }
 
-#menu-btn-check {
-  display: none; }
+  #menu-btn-check:checked ~ .hamburger-menu--menu-btn--btn span::after {
+    top: 0;
+    transform: rotate(-45deg); }
 
+  #menu-btn-check {
+    display: none; } }
+@media screen and (min-width: 1024px) {
+  #menu-btn-check {
+    display: none; } }
 .common__header {
   background-image: url(../img/bg-header_sp.png);
   height: 100%;
@@ -170,61 +173,137 @@ table {
     font-family: EB Garamond;
     font-size: 11px; }
 
-.top {
-  display: grid;
-  margin: 0;
-  min-height: 100vh;
-  grid-template-rows: 360px 1fr 137px;
-  grid-template-columns: 1fr;
-  row-gap: 40px; }
-  .top__header {
-    background-image: url("../img/bg-header_sp.png");
-    height: 100%;
-    background-size: cover;
+@media screen and (min-width: 1024px) {
+  .top {
     display: grid;
-    grid-template-rows: 48px 89px 82px 1fr;
+    margin: 0;
+    min-height: 100vh;
+    grid-template-rows: 680px 1fr 167px;
     grid-template-columns: 1fr;
-    align-items: center;
-    justify-content: center; }
-    .top__header--main-content {
-      text-align: center; }
-    .top__header--main-content1 {
-      font-size: 50px;
-      color: #C32D4D;
-      font-family: EB Garamond;
-      margin-bottom: 5px; }
-      .top__header--main-content1 small {
-        font-size: 30px; }
-    .top__header--title img {
-      padding: 15px; }
-  .top__main {
-    display: grid;
-    grid-template-rows: 1fr 310px;
-    row-gap: 26px; }
-    .top__main--sentences {
-      padding-right: 20px;
-      padding-left: 20px; }
-    .top__main--sentence {
-      color: #333333;
-      font-family: Noto Sans JP Regular;
-      line-height: 25px; }
-    .top__main--sentence1 {
-      font-size: 15px; }
-    .top__main--sentence2 {
-      font-size: 14px; }
-      .top__main--sentence2 img {
-        float: left;
-        padding-right: 10px;
-        padding-bottom: 14px; }
-    .top__main__links {
-      padding-top: 22px;
-      padding-bottom: 32px; }
-      .top__main__links a {
-        color: #C32D4D; }
-    .top__main--image {
+    row-gap: 70px; }
+    .top__header {
+      background-image: url("../img/bg-page-header_pc.png");
+      height: 100%;
+      background-size: cover;
       display: grid;
+      grid-template-rows: 30px 25px 209px 146px 1fr;
+      grid-template-columns: 1fr 538px 1fr;
+      align-items: center;
       justify-content: center; }
+      .top__header--main-contents {
+        grid-row: 4 / 5;
+        grid-column: 2 / 3; }
+      .top__header--main-content {
+        text-align: center; }
+      .top__header--main-content1 {
+        font-size: 88px;
+        color: #C32D4D;
+        font-family: EB Garamond;
+        margin-bottom: 5px; }
+        .top__header--main-content1 small {
+          font-size: 64px; }
+      .top__header--main-content2 {
+        font-size: 18px;
+        font-family: Noto Sans JP Regular; }
+      .top__header--title {
+        grid-row: 2 / 3; }
+        .top__header--title img {
+          padding-left: 30px; }
+      .top__header--menu-btn {
+        grid-row: 2 / 3;
+        grid-column: 3 / 4; }
+    .top__main {
+      display: grid;
+      grid-template-columns: 555px 1fr;
+      column-gap: 50px;
+      margin: 0 auto; }
+      .top__main--sentence {
+        color: #333333;
+        font-family: Noto Sans JP Regular;
+        line-height: 25px; }
+      .top__main--sentence1 {
+        font-size: 16px; }
+      .top__main--sentence2 {
+        font-size: 14px; }
+        .top__main--sentence2 img {
+          float: left;
+          padding-right: 10px;
+          padding-bottom: 14px; }
+      .top__main__links {
+        padding-top: 22px;
+        padding-bottom: 32px; }
+        .top__main__links a {
+          color: #C32D4D; }
+      .top__main--image {
+        display: grid;
+        justify-content: center; }
 
+  .menu-content ul {
+    display: flex;
+    justify-content: flex-end;
+    column-gap: 20px;
+    margin-right: 20px; }
+    .menu-content ul li a {
+      text-decoration: none;
+      color: #333333;
+      font-size: 20px;
+      font-family: EB Garamond;
+      margin-right: 30px; } }
+@media screen and (max-width: 1023px) {
+  .top {
+    display: grid;
+    margin: 0;
+    min-height: 100vh;
+    grid-template-rows: 360px 1fr 137px;
+    grid-template-columns: 1fr;
+    row-gap: 40px; }
+    .top__header {
+      background-image: url("../img/bg-header_sp.png");
+      height: 100%;
+      background-size: cover;
+      display: grid;
+      grid-template-rows: 48px 89px 82px 1fr;
+      grid-template-columns: 1fr;
+      align-items: center;
+      justify-content: center; }
+      .top__header--main-content {
+        text-align: center; }
+      .top__header--main-content1 {
+        font-size: 50px;
+        color: #C32D4D;
+        font-family: EB Garamond;
+        margin-bottom: 5px; }
+        .top__header--main-content1 small {
+          font-size: 30px; }
+      .top__header--title img {
+        padding: 15px; }
+    .top__main {
+      display: grid;
+      grid-template-rows: 1fr 310px;
+      row-gap: 26px; }
+      .top__main--sentences {
+        padding-right: 20px;
+        padding-left: 20px; }
+      .top__main--sentence {
+        color: #333333;
+        font-family: Noto Sans JP Regular;
+        line-height: 25px; }
+      .top__main--sentence1 {
+        font-size: 15px; }
+      .top__main--sentence2 {
+        font-size: 14px; }
+        .top__main--sentence2 img {
+          float: left;
+          padding-right: 10px;
+          padding-bottom: 14px; }
+      .top__main__links {
+        padding-top: 22px;
+        padding-bottom: 32px; }
+        .top__main__links a {
+          color: #C32D4D; }
+      .top__main--image {
+        display: grid;
+        justify-content: center; } }
 .menu {
   display: grid;
   grid-template-rows: 160px 1fr 137px; }
@@ -283,5 +362,20 @@ table {
 .list-style-disc {
   list-style: disc;
   list-style-position: inside; }
+
+/* パソコンで見たときは"pc"のclassがついた画像が表示される */
+.pc {
+  display: block !important; }
+
+.sp {
+  display: none !important; }
+
+/* スマートフォンで見たときは"sp"のclassがついた画像が表示される */
+@media only screen and (max-width: 1023px) {
+  .pc {
+    display: none !important; }
+
+  .sp {
+    display: block !important; } }
 
 /*# sourceMappingURL=styles.css.map */
