--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,9 @@
 @import 'parts/footer.scss';
 @import 'parts/hamburger.scss';
 @import 'parts/common-header.scss';
+@import 'top/pc.scss';
 @import 'top/sp.scss';
 @import 'menu/sp.scss';
 @import 'access/sp.scss';
 @import 'recruit/sp.scss';
+@import 'parts/modifier.scss'
