--- a/scss/top/pc.scss
+++ b/scss/top/pc.scss
@@ -1,54 +1,63 @@
-// sp版
-@media screen and (max-width:1023px) {
+@media screen and (min-width:1024px) {
     .top {
         display: grid;
         margin: 0;
         min-height: 100vh;
-        grid-template-rows: 360px 1fr 137px;
+        grid-template-rows: 680px 1fr 167px;
         grid-template-columns: 1fr;
-        row-gap: 40px;
+        row-gap: 70px;
         &__header {
-            background-image: url("../img/bg-header_sp.png");
+            background-image: url("../img/bg-page-header_pc.png");
             height: 100%;
             background-size: cover;
             display: grid;
-            grid-template-rows: 48px 89px 82px 1fr;
-            grid-template-columns: 1fr;
+            grid-template-rows: 30px 25px 209px 146px 1fr;
+            grid-template-columns: 1fr 538px 1fr;
             align-items: center;
             justify-content: center;
+            &--main-contents {
+                grid-row: 4 / 5;
+                grid-column: 2 / 3;
+            }
             &--main-content {
                 text-align: center
             }
             &--main-content1 {
-                font-size: 50px;
+                font-size: 88px;
                 color: #C32D4D;
                 font-family: EB Garamond;
                 margin-bottom: 5px;
                 small {
-                    font-size: 30px;
+                    font-size: 64px;
                 }
             }
+            &--main-content2 {
+                font-size: 18px;
+                font-family: Noto Sans JP Regular;
+            }
             &--title {
+                grid-row: 2 / 3;
                 img {
-                    padding: 15px;
+                    padding-left: 30px;
                 }
+            }
+            &--menu-btn {
+                grid-row: 2 / 3;
+                grid-column: 3 / 4;
             }
         }
         &__main {
             display: grid;
-            grid-template-rows: 1fr 310px;
-            row-gap: 26px;
-            &--sentences {
-                padding-right: 20px;
-                padding-left: 20px;
-            }
+            grid-template-columns: 555px 1fr;
+            column-gap: 50px;
+            margin: 0 auto;
             &--sentence {
                 color: #333333;
                 font-family: Noto Sans JP Regular;
                 line-height: 25px;
             }
             &--sentence1 {
-                font-size: 15px;
+                font-size: 16px;
             }
             &--sentence2 {
                 font-size: 14px;
@@ -69,6 +78,20 @@
                 display: grid;
                 justify-content: center;
             }
+        }
+    }
+
+    .menu-content ul{
+        display: flex;
+        justify-content: flex-end;
+        column-gap: 20px;
+        margin-right: 20px;
+        li a {
+            text-decoration: none;
+            color: #333333;
+            font-size: 20px;
+            font-family: EB Garamond;
+            margin-right: 30px;
         }
     }
 }
