--- a/scss/menu/pc.scss
+++ b/scss/menu/pc.scss
@@ -1,15 +1,15 @@
-@media screen and (max-width:1023px) {
+@media screen and (min-width:1024px) {
     .menu {
         display: grid;
-        grid-template-rows: 160px 1fr 137px;
+        grid-template-rows: 200px 1fr 167px;
         &__main {
             display: grid;
-            grid-template-rows: 1fr 1fr 1fr;
-            grid-template-columns: 1fr 1fr;
-            row-gap: 26px;
-            column-gap: 15px;
+            grid-template-rows:1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr;
+            row-gap: 50px;
+            column-gap: 30px;
             margin: 0 auto;
-            padding: 40px 0;
+            padding: 70px 0;
             &--content {
                 img {
                     margin-bottom: 9px;
