--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,6 +4,7 @@
 @import 'parts/common-header.scss';
 @import 'top/pc.scss';
 @import 'top/sp.scss';
+@import 'menu/pc.scss';
 @import 'menu/sp.scss';
 @import 'access/sp.scss';
 @import 'recruit/sp.scss';
