--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,5 +7,6 @@
 @import 'menu/pc.scss';
 @import 'menu/sp.scss';
 @import 'access/sp.scss';
+@import 'access/pc.scss';
 @import 'recruit/sp.scss';
 @import 'parts/modifier.scss'
