--- a/scss/access/pc.scss
+++ b/scss/access/pc.scss
@@ -1,12 +1,13 @@
-@media screen and (max-width:1023px) {
+@media screen and (min-width:1024px) {
     .access__main {
         padding: 40px 0;
         &__map {
             text-align: center;
         }
         &__texts {
-            margin: 0 20px;
-            font-size: 15px;
+            width: 70%;
+            margin: 0 auto;
+            font-size: 16px;
             color: #333333;
             font-family: Noto Sans JP Regular;
         }
@@ -15,6 +16,7 @@
         }
         &__text2 {
             margin-bottom: 23px;
+            font-size: 15px;
             span {
                 font-family:EB Garamond;
             }
