--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,4 +9,5 @@
 @import 'access/sp.scss';
 @import 'access/pc.scss';
 @import 'recruit/sp.scss';
+@import 'recruit/pc.scss';
 @import 'parts/modifier.scss'
