--- a/scss/parts/modifier.scss
+++ b/scss/parts/modifier.scss
@@ -7,3 +7,11 @@
     .pc { display: none !important; }
     .sp { display: block !important; }
 }
+
+.hover-opacity {
+    transition:300ms;
+}
+.hover-opacity:hover {
+    opacity: 0.7;
+    color: #FFFFFF;
+}
