--- a/scss/parts/modifier.scss
+++ b/scss/parts/modifier.scss
@@ -1,17 +1,31 @@
-/* パソコンで見たときは"pc"のclassがついた画像が表示される */
+// PCorスマホでHTMLの表示/非表示を切り替える
 .pc { display: block !important; }
 .sp { display: none !important; }
-
-/* スマートフォンで見たときは"sp"のclassがついた画像が表示される */
 @media only screen and (max-width: 1023px) {
     .pc { display: none !important; }
     .sp { display: block !important; }
 }
 
+// hover時に半透明化
 .hover-opacity {
     transition:300ms;
 }
 .hover-opacity:hover {
     opacity: 0.7;
     color: #FFFFFF;
+}
+
+// スライドインアニメーション
+.slide-in {
+    animation: slide-in 1.6s;
+}
+@keyframes slide-in {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
